--- a/index.html
+++ b/index.html
@@ -11,9 +11,161 @@
         <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Link Css global-->
     <link rel="stylesheet" href="assets/css/global.css">
+    <!--
+        link css pokedex
+    -->
+    <link rel="stylesheet" href="assets/css/pokedex.css">
 </head>
 <body>
-    <h1>TESTE</h1>
+    
+    <section class="content">
+        <!-- Header -->
+        <header>
+            <!-- NavBar -->
+            <h1>
+                Pokedex
+            </h1>
+            <input class="search" type="text" placeholder="Search pokemon" alt="search pokemon">
+        </header>
+        <!-- Main Content -->
+        <ol class="pokemons">
+            <li class="pokemon">
+                <span class="number"> #001</span>
+                <span class="name"> Bubasaur </span>
+
+
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bubasaur">
+                </div>
+            
+            </li>
+            <li class="pokemon">
+                <span class="number"> #002</span>
+                <span class="name">  Ivysaur </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Ivysaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #003</span>
+                <span class="name">  Venusaur </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" alt="Venusaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #004</span>
+                <span class="name">   Charmander </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #005</span>
+                <span class="name">  Charmeleon </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #006</span>
+                <span class="name">  Charizzard </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizzard">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #004</span>
+                <span class="name">   Charmander </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #005</span>
+                <span class="name">  Charmeleon </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #006</span>
+                <span class="name">  Charizzard </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizzard">
+                </div>
+            </li> 
+            <li class="pokemon">
+                <span class="number"> #004</span>
+                <span class="name">   Charmander </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #005</span>
+                <span class="name">  Charmeleon </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number"> #006</span>
+                <span class="name">  Charizzard </span>
+               <div class="detail">
+                    <ol class="types">
+                        <li class="type"> grass</li>
+                        <li class="type"> poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizzard">
+                </div>
+            </li> 
+        </ol>
+    </section>
 
     <!-- Link JS -->
     <scrip src="assets/js/script.js">
