--- a/index.html
+++ b/index.html
@@ -101,69 +101,69 @@
                 </div>
             </li>
             <li class="pokemon">
-                <span class="number"> #004</span>
-                <span class="name">   Charmander </span>
+                <span class="number"> #007</span>
+                <span class="name">   Squirtle </span>
                <div class="detail">
                     <ol class="types">
                         <li class="type"> grass</li>
                         <li class="type"> poison</li>
                     </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg" alt="Squirtle">
                 </div>
             </li>
             <li class="pokemon">
-                <span class="number"> #005</span>
-                <span class="name">  Charmeleon </span>
+                <span class="number"> #008</span>
+                <span class="name">  Wartortle </span>
                <div class="detail">
                     <ol class="types">
-                        <li class="type"> grass</li>
+                        <li class="type"> water</li>
                         <li class="type"> poison</li>
                     </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/8.svg" alt="wartortle">
                 </div>
             </li>
             <li class="pokemon">
-                <span class="number"> #006</span>
-                <span class="name">  Charizzard </span>
+                <span class="number"> #009</span>
+                <span class="name">  Blastoise</span>
                <div class="detail">
                     <ol class="types">
                         <li class="type"> grass</li>
                         <li class="type"> poison</li>
                     </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizzard">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg" alt="Blastoise">
                 </div>
             </li> 
             <li class="pokemon">
-                <span class="number"> #004</span>
-                <span class="name">   Charmander </span>
+                <span class="number"> #010</span>
+                <span class="name">   Caterpie </span>
                <div class="detail">
                     <ol class="types">
                         <li class="type"> grass</li>
                         <li class="type"> poison</li>
                     </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/10.svg" alt="Caterpie">
                 </div>
             </li>
             <li class="pokemon">
-                <span class="number"> #005</span>
-                <span class="name">  Charmeleon </span>
+                <span class="number"> #011</span>
+                <span class="name">  Metapod </span>
                <div class="detail">
                     <ol class="types">
                         <li class="type"> grass</li>
                         <li class="type"> poison</li>
                     </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/11.svg" alt="Metapod">
                 </div>
             </li>
             <li class="pokemon">
-                <span class="number"> #006</span>
-                <span class="name">  Charizzard </span>
+                <span class="number"> #012</span>
+                <span class="name">  Butterfree</span>
                <div class="detail">
                     <ol class="types">
                         <li class="type"> grass</li>
                         <li class="type"> poison</li>
                     </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizzard">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/12.svg" alt="Charizzard">
                 </div>
             </li> 
         </ol>
