Adiciona fetch para api

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     </section>
 
     <!-- Link JS -->
-    <scrip src="assets/js/script.js">
-        </script>
+    <scrip src="assets/js/api.js"></script>
+        
 </body>
 
 </html>
