--- a/index.html
+++ b/index.html
@@ -1,177 +1,221 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <!-- Normalize -->    
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+      integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Google fonts Robotto-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Link Css global-->
-    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/global.css" />
     <!--
         link css pokedex
     -->
-    <link rel="stylesheet" href="assets/css/pokedex.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/pokedex.css" />
+  </head>
+  <body>
     <!--
         teste
     -->
     <section class="content">
-        <!-- Header -->
-        <header>
-            <!-- NavBar -->
-            <h1>
-                Pokedex
-            </h1>
-            <input class="search" type="text" placeholder="Search pokemon" alt="search pokemon">
-        </header>
-        <!-- Main Content -->
-        <ol class="pokemons">
-            <li class="pokemon">
-                <span class="number"> #001</span>
-                <span class="name"> Bubasaur </span>
+      <!-- Header -->
+      <header>
+        <!-- NavBar -->
+        <h1>Pokedex</h1>
+        <input
+          class="search"
+          type="text"
+          placeholder="Search pokemon"
+          alt="search pokemon"
+        />
+      </header>
+      <!-- Main Content -->
+      <ol class="pokemons">
+        <li class="pokemon">
+          <span class="number"> #001</span>
+          <span class="name"> Bubasaur </span>
 
-
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bubasaur">
-                </div>
-            
-            </li>
-            <li class="pokemon">
-                <span class="number"> #002</span>
-                <span class="name">  Ivysaur </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Ivysaur">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #003</span>
-                <span class="name">  Venusaur </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" alt="Venusaur">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #004</span>
-                <span class="name">   Charmander </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #005</span>
-                <span class="name">  Charmeleon </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #006</span>
-                <span class="name">  Charizzard </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizzard">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #007</span>
-                <span class="name">   Squirtle </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg" alt="Squirtle">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #008</span>
-                <span class="name">  Wartortle </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> water</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/8.svg" alt="wartortle">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #009</span>
-                <span class="name">  Blastoise</span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg" alt="Blastoise">
-                </div>
-            </li> 
-            <li class="pokemon">
-                <span class="number"> #010</span>
-                <span class="name">   Caterpie </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/10.svg" alt="Caterpie">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #011</span>
-                <span class="name">  Metapod </span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/11.svg" alt="Metapod">
-                </div>
-            </li>
-            <li class="pokemon">
-                <span class="number"> #012</span>
-                <span class="name">  Butterfree</span>
-               <div class="detail">
-                    <ol class="types">
-                        <li class="type"> grass</li>
-                        <li class="type"> poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/12.svg" alt="Charizzard">
-                </div>
-            </li> 
-        </ol>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+              alt="Bubasaur"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #002</span>
+          <span class="name"> Ivysaur </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
+              alt="Ivysaur"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #003</span>
+          <span class="name"> Venusaur </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
+              alt="Venusaur"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #004</span>
+          <span class="name"> Charmander </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
+              alt="Charmander"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #005</span>
+          <span class="name"> Charmeleon </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg"
+              alt="Charmeleon"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #006</span>
+          <span class="name"> Charizzard </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
+              alt="Charizzard"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #007</span>
+          <span class="name"> Squirtle </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg"
+              alt="Squirtle"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #008</span>
+          <span class="name"> Wartortle </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">water</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/8.svg"
+              alt="wartortle"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #009</span>
+          <span class="name"> Blastoise</span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg"
+              alt="Blastoise"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #010</span>
+          <span class="name"> Caterpie </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/10.svg"
+              alt="Caterpie"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #011</span>
+          <span class="name"> Metapod </span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/11.svg"
+              alt="Metapod"
+            />
+          </div>
+        </li>
+        <li class="pokemon">
+          <span class="number"> #012</span>
+          <span class="name"> Butterfree</span>
+          <div class="detail">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/12.svg"
+              alt="Charizzard"
+            />
+          </div>
+        </li>
+      </ol>
     </section>
 
     <!-- Link JS -->
-    <scrip src="assets/js/script.js"></script>
-        
-</body>
-
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
